# Tianchi-BigData

./: Readme.md  pyproject.toml
Mobile_Recommendation/data_preanalysis/: data_analysis.py  dict_csv.py  time_test_of_data_loading.py
Mobile_Recommendation/feature_construct/: divide_data_set.py  feature_construct_part_1.py  feature_construct_part_2.py  feature_construct_part_3.py
Mobile_Recommendation/model_based/: data_load.py  gbdt_on_subsample.py  k_means_preprocessing.py  lr_on_subsample.py  rf_on_subsample.py  xgb_test.py
Mobile_Recommendation/rule_based/: rule_example.py
